Rename to altman-artists + Pages deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opera-agent-website",
+  "name": "altman-artists",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,4 +7,3 @@
     "dev": "node scripts/dev.mjs"
   }
 }
-
